Closed
Bug 238449
Opened 22 years ago
Closed 22 years ago
browser context menu is shown when right clicking on java applet crossword
Categories
(Core Graveyard :: Java-Implemented Plugins, defect, P3)
Core Graveyard
Java-Implemented Plugins
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.7final
People
(Reporter: carltoncold77, Assigned: jst)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.65 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7b) Gecko/20040316
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7b) Gecko/20040316
One of my daily habits is to play java crossword puzzles. Anyways,
right-clicking on the crossword itself is a functionality that is needed by the
applet. Now that I have installed Mozilla 1.7b, expected behavior has changed.
Reproducible: Always
Steps to Reproduce:
1. Goto any of the crossword puzzles below...
http://crosswords.washingtonpost.com/wp-srv/style/crosswords/daily/front.htm
http://www.pzzl.nl/newsday/crossword/
2. Wait for crossword to load then right click on applet itself
Actual Results:
When right clicking over the crossword for the first time, there seems to be a
slight delay but the browser context menu is eventually displayed.
Expected Results:
The browser context menu should NOT be displayed when right clicking over a java
applet. Anywhere else on the window, right clicking should perform as usual.
It's not a showstopper. You can still play the crossword but it's annoying
whenever the context menu blocks the playing surface and you have to click
elsewhere to cancel the menu.
This was never a problem in Mozilla 1.7a and all subsequent releases (as far
back as Mozilla 1.1 when I started using Mozilla as my main browser). I am aware
that 1.7b has a new feature that allows users to enabling/disabling scripting of
context menus under the Preferences -> Advanced -> Scripts & Plugins. I am able
to replicate this problem with both the option checked and unchecked. I don't
know if this new feature has anything to do with this issue but I have a funny
feeling that it does.
Comment 1•22 years ago
|
||
flii also complained about this problem.
Regression window (testing Firefox nightlies on WinXP):
02/19 - good
02/21 - broken [right-clicking Java produces a browser context menu]
Comment 2•22 years ago
|
||
This sucks for any of those applets using the secondary button..
Flags: blocking1.7?
Comment 3•22 years ago
|
||
This was caused by the fix for bug 233142. Jst?
| Assignee | ||
Comment 4•22 years ago
|
||
Ere, bug 233142 was just a regression fix that made our event handling work like
it did before the change in bug 226462 went in. Are you sure that you're looking
at the right change?
Comment 5•22 years ago
|
||
I backed out the patch, ran make on dom, content and layout/build, and the
problem was gone. I just retried and it worked again. Without backing out the
patch, there is a quite long delay after clicking the right button when nothing
happens and mozilla seems frozen (on a debug build), but then the context menu
is brought up. When the patch is backed out, there is no such delay and the
context menu doesn't come up.
I had to manually backout the changes to nsJSEventListener.cpp, but now that I
checked it, they don't make any difference. So, to me it looks there's only the
return value handling changes left, but somehow those make a difference.
Comment 6•22 years ago
|
||
The changes to nsEventListenerManager.cpp are the culprit.
Assignee: blackconnect → jst
| Assignee | ||
Comment 7•22 years ago
|
||
Did you just back out the patch in bug 233142, or did you back out the sum of
the patches in that bug plus bug 226462? The latter makes Mozilla deal
incorrectly with a large number of events, the former fixes that problem so that
the code does what it did before either of those changes went in.
Comment 8•22 years ago
|
||
I only backed out the patch from bug 233142. And it's enough to back out the
changes of nsEventListenerManager.cpp.
| Assignee | ||
Comment 9•22 years ago
|
||
(In reply to comment #8)
> I only backed out the patch from bug 233142. And it's enough to back out the
> changes of nsEventListenerManager.cpp.
Aha! Thanks, that helped! Patch coming up.
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
OS: Windows 2000 → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla1.7final
| Assignee | ||
Comment 10•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #145775 -
Flags: superreview?(dbaron)
Attachment #145775 -
Flags: review?(dbaron)
Attachment #145775 -
Flags: superreview?(dbaron)
Attachment #145775 -
Flags: superreview+
Attachment #145775 -
Flags: review?(dbaron)
Attachment #145775 -
Flags: review+
| Assignee | ||
Comment 11•22 years ago
|
||
Comment on attachment 145775 [details] [diff] [review]
Make nsPluginDOMContextMenuListener::ContextMenu() play nice.
Requesting 1.7 approval for this trivial regression fix.
Attachment #145775 -
Flags: approval1.7?
Comment 12•22 years ago
|
||
Comment on attachment 145775 [details] [diff] [review]
Make nsPluginDOMContextMenuListener::ContextMenu() play nice.
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #145775 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Comment 13•22 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 14•22 years ago
|
||
*** Bug 240593 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Flags: blocking1.7?
Comment 15•22 years ago
|
||
*** Bug 243541 has been marked as a duplicate of this bug. ***
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•