Fixing bug 238449. Make plugins not get mozilla context menus again. r+sr=dbaron@dbaron.org, a=asa@mozilla.org